--- a/app/assets/stylesheets/picks/show.scss
+++ b/app/assets/stylesheets/picks/show.scss
@@ -16,6 +16,10 @@
   margin-top: 20px;
 }
 
+.debit {
+  margin-top: 20px;
+}
+
  @media screen and (max-width: 480px) {
  #ending-date {
      margin-top: 15px;
