--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -88,7 +88,10 @@
       <div class="delivery">
         <h5 id="status">Status</h5>
         <div class="info-bloc">
-          <%= @order.completed == true ? "Finalisée" : "A traiter" %>
+          <%= simple_form_for [@pick, @order], url: order_path(@order) do |f| %>
+            <%= f.collection_radio_buttons :completed, [[true, 'Finalisée'], [false, 'A traiter']], :first, :last  %>
+            <%= f.button :submit, "Enregistrer", class: "btn-blue", id:"ab-cta" %>
+          <% end %>
         </div>
       </div>
     </div>
