--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -173,6 +173,28 @@ input[type=number]::-webkit-outer-spin-button {
   margin: auto;
 }
 
+.status-form {
+  display: flex;
+  justify-content: center;
+}
+
+.form-choice {
+  background: #b7b7b7;
+  padding: 10px 20px;
+  border-radius: 5px;
+  opacity: .4;
+  text-align: center;
+  &:hover {
+    opacity: 1;
+    cursor: pointer;
+  }
+  &.active {
+  background: #ff9800;
+  color: white;
+  opacity: 1;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .page-container {
       width: 100% !important;
