--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="delivery">
-        <h5 id="status">Status de la commande</h5>
+        <h5 id="status">Statut de la commande</h5>
         <div class="info-bloc">
           <div class="status-form">
             <%= simple_form_for [@pick, @order], url: order_path(@order) do |f| %>
