--- a/app/views/pros/all_orders.html.erb
+++ b/app/views/pros/all_orders.html.erb
@@ -15,7 +15,7 @@
                 <th>Date</th>
                 <th>Nom de la campagne</th>
                 <th>Client</th>
-                <th>Status</th>
+                <th>Statut</th>
               </tr>
               <% @orders.each do |order| %>
                 <tr class="tr-body">
