--- a/app/views/users/my_orders.html.erb
+++ b/app/views/users/my_orders.html.erb
@@ -17,7 +17,7 @@
           </div>
           <%= render "my_orders", picks: @picks %>
         <% else %>
-          <h4>Vous ne participez actuellement à aucune campagne</h4>
+          <h4>Vous n'avez encore rien commandé</h4>
         <% end %>
       </div>
     </div>
