--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -20,13 +20,15 @@
           </div>
           <div class="explain-block">
             <h3>Choisissez le type de campagne que vous voulez lancer</h3>
-            <div class="test-type">
-              <h5 class="test-title">A/B Test</h5>
-              <p>Vous hésitez entre plusieurs prix pour votre promo. Lequel serait le plus efficient ? Nous présentons vos prix de façon alternative à chaque participant à la campagne de test pour le déterminer. <b>L'A/B test permet de valider votre hypothèse la plus pertinente.</b></p>
-            </div>
-            <div class="test-type">
-              <h5 class="test-title">Test ouvert</h5>
-              <p>Les testeurs intéressés nous communiquent le prix maximal qu'ils sont prêts à payer pour votre produit. L'analyse de chaque proposition permet de déterminer quel volume il est possible de réaliser (et donc quel chiffre d'affaires, marge...) en fonction du prix fixé. <b>Le test ouvert permet de stimuler la demande pour votre produit.</b></p>
+            <div class="two-tests">
+              <div class="test-type" id="ab-card">
+                <h5 class="test-title">A/B Test</h5>
+                <p>Vous hésitez entre plusieurs prix pour votre promo. Lequel serait le plus efficient ? Nous présentons vos prix de façon alternative à chaque participant à la campagne de test pour le déterminer. <b>L'A/B test permet de valider votre hypothèse la plus pertinente.</b></p>
+              </div>
+              <div class="test-type" id="open-card">
+                <h5 class="test-title">Test ouvert</h5>
+                <p>Les testeurs intéressés nous communiquent le prix maximal qu'ils sont prêts à payer pour votre produit. L'analyse de chaque proposition permet de déterminer quel volume il est possible de réaliser (et donc quel chiffre d'affaires, marge...) en fonction du prix fixé. <b>Le test ouvert permet de stimuler la demande pour votre produit.</b></p>
+              </div>
             </div>
           </div>
           <div class="test-type-inputs">
