--- a/app/views/products/_new-edit-form.html.erb
+++ b/app/views/products/_new-edit-form.html.erb
@@ -3,8 +3,8 @@
   <div class="input-group name-and-cat">
     <%= f.input :title, label:"Nom", placeholder: "Nom de votre produit ou service" %>
     <%= f.association :category, label:"Catégorie", prompt: "Selectionner une categorie" %>
-      <%= f.input :price, label: "Prix TTC (€)", placeholder: "Exemple: 89.90" %>
-      <%= f.input :price_ht, label: "Prix HT (€)", placeholder: "Exemple: 74,92" %>
+      <%= f.input :price, label: "Prix original TTC (€)", placeholder: "Exemple: 89.90" %>
+      <%= f.input :price_ht, label: "Prix original HT (€)", placeholder: "Exemple: 74,92" %>
     <%= f.input :expedition_costs, label: "Livraison (€)", placeholder: "Coûts de livraison pour le client" %>
     <%= f.input :website, label: "Site internet", placeholder: "Ex: https://wwww.votre_site/votre_produit.com" %>
     <%= f.input :size_guide, label: "Guide des tailles", placeholder: "url du site / guide des tailles" %>
