make some tests on campaign finalize

--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -19,7 +19,7 @@
             </div>
           </div>
           <div class="explain-block">
-            <h3>Choisissez le type de campagne que vous voulez lancer</h3>
+            <h3>Sélectionnez le type de campagne que vous souhaitez lancer:</h3>
             <div class="two-tests">
               <div class="test-type" id="ab-card">
                 <h5 class="test-title">A/B Test</h5>
