--- a/app/assets/stylesheets/campaigns/index.scss
+++ b/app/assets/stylesheets/campaigns/index.scss
@@ -104,6 +104,14 @@ td {
     color: inherit;
     span {
       text-decoration: underline;
+      margin-left: 7px;
+    }
+    .fa-check-circle {
+      color: #4caf50;
+    }
+
+    .fa-pause-circle {
+      color: #EE5F5B;
     }
   }
 }
