--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -100,9 +100,6 @@ td, th {
   text-align: center;
 }
 
-td:last-child {
-  padding: 0;
-}
 
 .orders {
   margin-top: 20px;
@@ -120,7 +117,9 @@ td:last-child {
   -webkit-box-shadow: 0 7px 13px -3px rgba(45,35,66,0.3), 0 2px 4px 0 rgba(45,35,66,0.4), inset 0 -2px 0 0 #4b58ba;
   box-shadow: 0 7px 13px -3px rgba(45,35,66,0.3), 0 2px 4px 0 rgba(45,35,66,0.4), inset 0 -2px 0 0 #ce870c;
   transition: box-shadow 0.15s ease, transform 0.15s ease, -webkit-box-shadow 0.15s ease, -webkit-transform 0.15s ease;
-
+  display: table-cell;
+  padding: 5px 10px;
+  border-radius: 30px;
 
   &:hover {
     -webkit-box-shadow: 0 5px 8px -1px rgba(45,35,66,0.3), 0 4px 5px 0 rgba(45,35,66,0.4), inset 0 -2px 0 0 #ce870c;
@@ -130,7 +129,7 @@ td:last-child {
     transform: translateY(-1px);
     color: white;
   }
-  padding: 5px;
+
 
   span {
     font-size: 17px;
