change order status as it can be service and does not need delivery

--- a/app/views/campaigns/_data-campaign-ab.html.erb
+++ b/app/views/campaigns/_data-campaign-ab.html.erb
@@ -3,6 +3,18 @@
   <div class="table-container">
     <table>
       <tr>
+        <td><h3>Commandes</h3></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>
+          <div class="download-link">
+            <i class="fas fa-arrow-alt-circle-down"></i>
+            <span>Télécharger</span>
+          </div>
+        </td>
+      </tr>
+      <tr>
         <th>Prix original</th>
         <th>Remise</th>
         <th>Prix promotionnel</th>
