--- a/app/views/campaigns/_data-campaign-open.html.erb
+++ b/app/views/campaigns/_data-campaign-open.html.erb
@@ -1,8 +1,19 @@
 <% if @validated_picks.any? %>
-  <div class="info-detail">Veuillez choisir le prix que vous allez accorder aux testeurs en fonction du CA, volume, marges... etc qu'il vous est possible de réaliser. (Télécharger au format csv)</div>
   <%= render 'finalize-while-ongoing-modal' %>
   <div class="table-container">
     <table>
+      <tr>
+        <td><h3>Commandes</h3></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>
+          <div class="download-link">
+            <i class="fas fa-arrow-alt-circle-down"></i>
+            <span>Télécharger</span>
+          </div>
+        </td>
+      </tr>
       <tr>
         <th>Prix original</th>
         <th>Remise</th>
