--- a/app/assets/stylesheets/campaigns/index.scss
+++ b/app/assets/stylesheets/campaigns/index.scss
@@ -77,29 +77,21 @@
   }
 }
 
-table {
-  box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -o-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  -ms-box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
-  border-collapse: separate !important;
-}
 
 
 th {
-  text-align: center;
-  color: #fff;
-  line-height: 1.4;
-  background-color: #6c7ae0;
-  padding: 15px 0;
+  padding: 5px 15px;
+  background-color: #FFF;
 }
 
+
 td {
-  text-align: center;
   background: transparent;
-  padding: 5px 10px;
-  border: 1px solid rgba(0, 0, 0, 0.0625);
+  padding: 5px 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.0625);
+  span {
+    margin-left: 7px;
+  }
   a {
     color: inherit;
     span {
