--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -93,12 +93,15 @@ tbody {
 }
 
 th {
-  padding: 10px 5px;
-  border: 1px solid rgba(0, 0, 0, 0.0625);
+  background-color: #6c7ae0;
+  color: #FFF;
 }
-td, th {
-  text-align: center;
+
+.download-link {
+  color: #ff9800;
+  font-size: 18px;
 }
+
 
 
 .orders {
