--- a/app/views/campaigns/promo.xls.erb
+++ b/app/views/campaigns/promo.xls.erb
@@ -45,7 +45,7 @@
         <Cell ss:StyleID="s74"><Data ss:Type="String">Prix original (€)</Data></Cell>
         <Cell ss:StyleID="s74"><Data ss:Type="String">Remise (%)</Data></Cell>
         <Cell ss:StyleID="s74"><Data ss:Type="String" x:Color="#177926">Prix promotionnel</Data></Cell>
-        <Cell ss:StyleID="s74"><Data ss:Type="String">Quantités cumulées (unités)</Data></Cell>
+        <Cell ss:StyleID="s74"><Data ss:Type="String">Quantités vendues (unités)</Data></Cell>
         <Cell ss:StyleID="s74"><Data ss:Type="String">CA (€)</Data></Cell>
       </Row>
     <% @validated_picks.each do |pick| %>
