--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -6,6 +6,10 @@
   margin: 20px 0;
 }
 
+.new-price {
+  color: #ff9800;
+}
+
 .stat-block {
   border: 1px solid rgba(0,0,0,.0625);
   padding: 20px;
