uniq pick on price

--- a/app/views/campaigns/_data-campaign-ab.html.erb
+++ b/app/views/campaigns/_data-campaign-ab.html.erb
@@ -18,7 +18,7 @@
     <th>Quantités vendues (U)</th>
     <th>CA</th>
   </tr>
-  <% @validated_picks.each do |pick| %>
+  <% @uniq.each do |pick| %>
     <tr class="tr-body">
       <td><%= sprintf('%.2f', @campaign.product.price) %> €</td>
       <td><%= ((pick.price - @campaign.product.price) / (@campaign.product.price)*100).round %> %</td>
