--- a/app/views/campaigns/_data-campaign-open.html.erb
+++ b/app/views/campaigns/_data-campaign-open.html.erb
@@ -19,7 +19,7 @@
     <th>Quantités vendues</th>
     <th>CA</th>
     <% unless @campaign.finalized == true %>
-      <th>Choisir prix</th>
+      <th>Choisir un prix</th>
     <% end %>
   </tr>
   <% @validated_picks.each do |pick| %>
